# pdf2john

./: .flake8  .gitignore  .pre-commit-config.yaml  Brewfile  README.md  pdf2john.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  tests.yaml
src/pdf2john/: __init__.py  pdf2john.py
tests/: conftest.py  debug_output.txt  test_cli.py  test_main.py  test_password_hashes.py
