[tool.poetry]
name = "pdf2john"
version = "0.2.0"
description = "A modern refactoring of the legacy pdf2john library"
authors = ["Benjamin Dornel <benjamindornel@gmail.com>"]
license = "MIT"
repository = "https://github.com/benjamin-awd/pdf2john"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security"
]

[tool.poetry.dependencies]
python = "^3.11"
pyhanko = ">=0.21,<0.26"

[tool.poetry.group.dev.dependencies]
black = ">=23.9.1,<25.0.0"
isort = "^5.12.0"
taskipy = "^1.12.0"
pytest = ">=7.4.2,<9.0.0"
ruff = ">=0.5.0,<0.6.0"

[tool.taskipy.tasks]
format = "isort . && black ."
lint = "ruff check ."
test = "pytest ."

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf2john = "pdf2john.pdf2john:main"
