[project]
name = "pdf2john"
version = "0.2.0"
description = "A modern refactoring of the legacy pdf2john library"
authors = [{ name = "Benjamin Dornel", email = "benjamindornel@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "cffi==1.17.1",
    "pyhanko>=0.21,<0.30",
]

[project.urls]
Repository = "https://github.com/benjamin-awd/pdf2john"

[project.scripts]
pdf2john = "pdf2john.pdf2john:main"

[dependency-groups]
dev = [
    "black>=23.9.1,<26.0.0",
    "isort>=5.12,<7.0",
    "taskipy>=1.12.0,<2",
    "pytest>=7.4.2,<9.0.0",
    "ruff>=0.5.0,<0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
format = "isort . && black ."
lint = "ruff check ."
test = "pytest ."

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
